# mojarung_radar

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLASSIFICATION_GUIDE.md  CLICKHOUSE_UI_GUIDE.md  DEPLOYMENT.md  Dockerfile  EXTENDING.md  FASTTEXT_CLASSIFIER_GUIDE.md  IMPLEMENTATION_GUIDE.md  ML_INTEGRATION_README.md  Makefile  NER_ANALYZER_GUIDE.md  NVIDIA_API_SETUP.md  PARSER_GUIDE.md  PROJECT_FILES.md  QUICKSTART.md  README.md  TREE.md  docker-compose.yml  env.example  example_usage.py  main.py  parser.py  pyproject.toml  run_analysis_with_ml.py  tasks.md  test_ml_integration.py  tz.md  udo systemctl status docker  xz.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_timezone_support.py
app/: main.py
app/api/endpoints/: health.py  news.py  sources.py
app/core/: config.py  dependencies.py  logging.py
app/db/: redis.py  session.py
app/graph/: __init__.py  graph.py  state.py
app/graph/nodes/: context.py  deduplication.py  draft.py  enrichment.py  ingestion.py  scoring.py
app/llm/: __init__.py  base.py  openrouter.py
app/models/: __init__.py  news.py  source.py  story.py
app/schemas/: news.py  response.py
app/services/: embeddings.py  news_service.py
docker/: Dockerfile
scripts/: init_db.py  migrate_clickhouse_add_ner_columns.py  mock_parser.py  quickstart.py  seed_sources.py
src/: __init__.py  di.py  main.py
src/agents/: __init__.py  graph.py  graphs.py  nodes.py  state.py
src/agents/nodes/: __init__.py  context_rag.py  deduplication.py  draft_generator.py  enrichment.py  scoring.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routers/: analysis.py
src/api/routes/: __init__.py  health.py  radar.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  logging_config.py
src/db/: __init__.py  clickhouse_client.py  models.py  session.py
src/db/alembic/: env.py
src/db/alembic/versions/: 001_initial_migration.py
src/domain/: __init__.py  entities.py  events.py  value_objects.py
src/infrastructure/database/: __init__.py  models.py  repositories.py  session.py
src/infrastructure/llm/: __init__.py  base.py  openrouter.py
src/infrastructure/redis/: __init__.py  cache.py  client.py
src/infrastructure/sources/: news_scrapers.py
src/parsers/: __init__.py  base.py  classifier.py  fasttext_classifier.py  gazeta_parser.py  lenta_parser.py  mail_news_parser.py  mosru_news_parser.py  ner_analyzer.py  rbc_parser.py  ria_novosti_parser.py  scheduler.py
src/services/: __init__.py  dedup.py  embeddings_service.py  hotness_scorer.py  llm_client.py  ml_scorer.py  news_service.py  scoring_service.py
src/workers/: __init__.py  news_processor.py
tests/integration/: test_api.py
tests/unit/: test_scoring_service.py
