[project]
name = "radar"
version = "0.1.0"
description = "RADAR - Financial News Analysis System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "clickhouse-connect>=0.8.8",
    "aio-pika>=9.5.0",
    "faiss-cpu>=1.9.0",
    "polars>=1.12.0",
    "langgraph>=0.2.45",
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.9",
    "loguru>=0.7.2",
    "httpx>=0.28.0",
    "numpy>=1.26.0,<2.0.0",
    "sentence-transformers>=3.3.1",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pandas>=2.2.0",
    "fasttext-wheel>=0.9.2",
    "huggingface-hub>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.4",
]
